<resources>
    <string name="app_name">Miles to Km - SmartConv</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">SmartConv - Miles to Kilometers</string>
    <string name="nav_header_subtitle">contact@technibyte.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--Menu items' names-->
    <string name="menu_home">SmartConv</string>
    <string name="menu_math_behind">Math Behind</string>
    <string name="menu_about">About</string>
    <string name="remove_ads">Remove Ads</string>
    <string name="rate_and_review">Rate and Review</string>

    <!-- Home Screen Strings - #Start-->
    <string name="miles_hint">Miles</string>
    <string name="kilometer_hint">Kilometers</string>

    <!--Keyboard strings-->
    <string name="number0">0</string>
    <string name="number1">1</string>
    <string name="number2">2</string>
    <string name="number3">3</string>
    <string name="number4">4</string>
    <string name="number5">5</string>
    <string name="number6">6</string>
    <string name="number7">7</string>
    <string name="number8">8</string>
    <string name="number9">9</string>
    <string name="decimalSign">.</string>
    <string name="clearAll">C</string>

    <!-- Home Screen Strings - #End-->

    <!-- Math Behind Screen Strings - #Start-->
    <string name="math_behind_title">Math Expressions</string>
    <string name="miles_to_kilometers">Miles to Kilometers conversion:</string>
    <string name="kilometers_to_miles">Kilometers to Miles conversion:</string>
    <string name="miles_to_kilometers_formula">kilometer is equal to miles divided by 0.62137</string>
    <string name="kilometers_to_miles_formula">miles is equal to kilometer times 0.62137</string>
    <!-- Math Behind Screen Strings - #End-->

    <!-- About Screen Strings - #Start-->
    <string name="about_text1">Programming: Alessandro Angelozi
\n\nVisual Design: Sofia Iervolino</string>

    <string name="about_text2">This app aims to make life easier,
\n\nand we hope it can be useful to you.
</string>

    <string name="about_text3">If you have any suggestions,
\n\nplease, let us know.
</string>

    <string name="about_text4">Thanks for choosing our app!
\n\nVisit our website:
</string>

    <string name="technibyte_logo">TechniByte\'s Logo</string>
    <string name="about_url"><u>technibyte.com</u></string>
    <string name="miles_to_kilometer_logo">Miles to Kilometer logo</string>
    <!-- About Strings - #End-->
</resources>