<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_math_behind"
            android:icon="@drawable/ic_baseline_calculate_24"
            android:title="@string/menu_math_behind" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_baseline_info_24"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/remove_ads"
            android:icon="@drawable/ic_baseline_shopping_cart_24"
            android:title="@string/remove_ads" />
        <item
            android:id="@+id/rate_and_review"
            android:icon="@drawable/ic_baseline_stars_24"
            android:title="@string/rate_and_review" />
    </group>
</menu>