<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".ui.about.AboutFragment">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="39dp"
        android:contentDescription="@string/miles_to_kilometer_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/about_smartconv_logo" />

    <TextView
        android:id="@+id/textView2"
        style="@style/textTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="69dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="68dp"
        android:fontFamily="@font/asap_medium"
        android:lineSpacingMultiplier="0.65"
        android:textAlignment="center"
        android:textSize="@dimen/texSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo"
        tools:text="@string/about_text1" />

    <TextView
        android:id="@+id/textView3"
        style="@style/textTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="69dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="68dp"
        android:fontFamily="@font/asap_medium"
        android:lineSpacingMultiplier="0.65"
        android:text="@string/about_text2"
        android:textAlignment="center"
        android:textSize="@dimen/texSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        style="@style/textTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="69dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="68dp"
        android:fontFamily="@font/asap_medium"
        android:lineSpacingMultiplier="0.65"
        android:text="@string/about_text3"
        android:textAlignment="center"
        android:textSize="@dimen/texSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginTop="24dp"
        android:background="#FFFFFF"
        android:lineSpacingMultiplier="0.7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="137dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="136dp"
        android:contentDescription="@string/technibyte_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:srcCompat="@drawable/about_technibyte_logo" />

    <TextView
        android:id="@+id/textView6"
        style="@style/textTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="102dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="101dp"
        android:fontFamily="@font/asap_medium"
        android:lineSpacingMultiplier="0.65"
        android:text="@string/about_text4"
        android:textAlignment="center"
        android:textSize="@dimen/texSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="151dp"
        android:autoLink="web"
        android:fontFamily="@font/asap_bold"
        android:lineSpacingMultiplier="0.65"
        android:textAlignment="center"
        android:textColor="@color/primaryBlue"
        android:textSize="@dimen/texSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:text="@string/about_url" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"
        app:adSize="BANNER"
        app:adUnitId="insert your adUnitId here"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />


</androidx.constraintlayout.widget.ConstraintLayout>
