<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".ui.home.HomeFragment">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/clearLastNumber"
        style="@style/numberButtons"
        android:layout_width="52dp"
        android:layout_height="89dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="11dp"
        android:fontFamily="@font/asap_medium"
        android:insetLeft="2dp"
        android:insetTop="2dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        android:padding="0dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:cornerRadius="12dp"
        app:icon="@drawable/ic_baseline_backspace_24"
        app:iconGravity="textStart"
        app:iconTint="@color/secondaryBlue"
        app:layout_constraintBottom_toBottomOf="@+id/decimalSign"
        app:layout_constraintStart_toEndOf="@+id/decimalSign"
        app:layout_constraintTop_toBottomOf="@+id/clearAllNumbers"
        app:strokeColor="@color/secondaryBlue"
        app:strokeWidth="2dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/clearAllNumbers"
        style="@style/numberButtons"
        android:layout_width="52dp"
        android:layout_height="141dp"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/asap_medium"
        android:insetLeft="2dp"
        android:insetTop="2dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        android:padding="0dp"
        android:text="@string/clearAll"
        android:textAlignment="center"

        android:textColor="@color/secondaryBlue"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="10dp"
        app:layout_constraintStart_toEndOf="@+id/number6"
        app:layout_constraintTop_toTopOf="@+id/number9"
        app:strokeColor="@color/secondaryBlue"
        app:strokeWidth="2dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/number0"
        style="@style/numberButtons"
        android:layout_width="115dp"
        android:layout_height="52dp"
        android:fontFamily="@font/asap_medium"
        android:insetLeft="2dp"
        android:insetTop="2dp"
        android:insetRight="0dp"
        android:insetBottom="2dp"
        android:padding="0dp"
        android:text="@string/number0"
        android:textAlignment="center"
        android:textSize="20sp"
        app:cornerRadius="57dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/decimalSign"
        app:layout_constraintStart_toStartOf="@+id/number1"
        app:strokeWidth="2dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/decimalSign"
        style="@style/numberButtons"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_marginTop="11dp"
        android:fontFamily="@font/asap_medium"
        android:insetLeft="2dp"
        android:insetTop="2dp"
        android:insetRight="0dp"
        android:insetBottom="1dp"
        android:padding="0dp"
        android:text="@string/decimalSign"
        android:textAlignment="center"
        android:textSize="20sp"
        app:cornerRadius="26dp"
        app:layout_constraintStart_toStartOf="@+id/number3"
        app:layout_constraintTop_toBottomOf="@+id/number3"
        app:strokeWidth="2dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/number7"
        style="@style/numberButtons"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/asap_medium"
        android:insetLeft="2dp"
        android:insetTop="2dp"
        android:insetRight="0dp"
        android:insetBottom="1dp"
        android:padding="0dp"
        android:text="@string/number7"
        android:textAlignment="center"
        android:textSize="20sp"
        app:cornerRadius="26dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/number8"
        app:layout_constraintEnd_toStartOf="@+id/number8"
        app:strokeWidth="2dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/number1"
        style="@style/numberButtons"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:fontFamily="@font/asap_medium"
        android:insetLeft="2dp"
        android:insetTop="2dp"
        android:insetRight="0dp"
        android:insetBottom="1dp"
        android:padding="0dp"
        android:text="@string/number1"
        android:textAlignment="center"
        android:textSize="20sp"
        app:cornerRadius="26dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/number2"
        app:layout_constraintStart_toStartOf="@+id/number4"
        app:strokeWidth="2dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/number4"
        style="@style/numberButtons"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:fontFamily="@font/asap_medium"
        android:insetLeft="2dp"
        android:insetTop="2dp"
        android:insetRight="0dp"
        android:insetBottom="1dp"
        android:padding="0dp"
        android:text="@string/number4"
        android:textAlignment="center"
        android:textSize="20sp"
        app:cornerRadius="26dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/number5"
        app:layout_constraintStart_toStartOf="@+id/number7"
        app:strokeWidth="2dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/number3"
        style="@style/numberButtons"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:fontFamily="@font/asap_medium"
        android:insetLeft="2dp"
        android:insetTop="2dp"
        android:insetRight="0dp"
        android:insetBottom="1dp"
        android:padding="0dp"
        android:text="@string/number3"
        android:textAlignment="center"
        android:textSize="20sp"
        app:cornerRadius="26dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/number2"
        app:layout_constraintStart_toStartOf="@+id/number6"
        app:strokeWidth="2dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/number8"
        style="@style/numberButtons"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="209dp"
        android:fontFamily="@font/asap_medium"
        android:insetLeft="2dp"
        android:insetTop="2dp"
        android:insetRight="0dp"
        android:insetBottom="1dp"
        android:padding="0dp"
        android:text="@string/number8"
        android:textAlignment="center"
        android:textSize="20sp"
        app:cornerRadius="26dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:strokeWidth="2dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/number5"
        style="@style/numberButtons"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/asap_medium"
        android:insetLeft="2dp"
        android:insetTop="2dp"
        android:insetRight="0dp"
        android:insetBottom="1dp"
        android:padding="0dp"
        android:text="@string/number5"
        android:textAlignment="center"
        android:textSize="20sp"
        app:cornerRadius="26dp"
        app:layout_constraintStart_toStartOf="@+id/number8"
        app:layout_constraintTop_toBottomOf="@+id/number8"
        app:strokeWidth="2dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/number6"
        style="@style/numberButtons"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:fontFamily="@font/asap_medium"
        android:insetLeft="2dp"
        android:insetTop="2dp"
        android:insetRight="0dp"
        android:insetBottom="1dp"
        android:padding="0dp"
        android:text="@string/number6"
        android:textAlignment="center"
        android:textSize="20sp"
        app:cornerRadius="26dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/number5"
        app:layout_constraintStart_toStartOf="@+id/number9"
        app:strokeWidth="2dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/number2"
        style="@style/numberButtons"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/asap_medium"
        android:insetLeft="2dp"
        android:insetTop="2dp"
        android:insetRight="0dp"
        android:insetBottom="1dp"
        android:padding="0dp"
        android:text="@string/number2"
        android:textAlignment="center"
        android:textSize="20sp"
        app:cornerRadius="26dp"
        app:layout_constraintStart_toStartOf="@+id/number5"
        app:layout_constraintTop_toBottomOf="@+id/number5"
        app:strokeWidth="2dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/milesDisplayLayout"
        style="@style/textInputTheme"
        android:layout_width="328dp"
        android:layout_height="56dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="41dp"
        android:hint="@string/miles_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/milesDisplay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.8"
            android:ems="10"
            android:fontFamily="@font/asap"
            android:gravity="center_horizontal"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:paddingBottom="11dp"
            android:textSize="20sp"
            tools:text="0 mi" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/kilometersDisplayLayout"
        style="@style/textInputTheme"
        android:layout_width="328dp"
        android:layout_height="56dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="41dp"
        android:hint="@string/kilometer_hint"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/milesDisplayLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/kilometersDisplay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.8"
            android:ems="10"
            android:fontFamily="@font/asap"
            android:gravity="center_horizontal"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:paddingBottom="11dp"
            android:textSize="20sp"
            tools:text="0 km" />


    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginTop="36dp"
        android:background="#FFFFFF"
        android:lineSpacingMultiplier="0.7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kilometersDisplayLayout" />

    <!--Buttons-->


    <com.google.android.material.button.MaterialButton
        android:id="@+id/number9"
        style="@style/numberButtons"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/asap_medium"
        android:insetLeft="2dp"
        android:insetTop="2dp"
        android:insetRight="0dp"
        android:insetBottom="1dp"
        android:padding="0dp"
        android:text="@string/number9"
        android:textAlignment="center"
        android:textSize="20sp"
        app:cornerRadius="26dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/number8"
        app:layout_constraintStart_toEndOf="@+id/number8"
        app:strokeWidth="2dp" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-3940256099942544/6300978111"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>